# numpy-user-dtypes

./: build_wheel.yml  temp.yml
.github/workflows/: build_docs.yml  build_wheel.yml  build_wheels.yml  buuld_wheels.yml  ci.yml  compiler_sanitization.yml  temp.yml
pr-preview/pr-32/: api_docs.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
quaddtype/: meson.build  pyproject.toml  reinstall.sh
quaddtype/numpy_quaddtype/src/: casts.cpp  dtype.c
quaddtype/subprojects/packagefiles/sleef/: meson.build
quaddtype/tests/: test_quaddtype.py
